--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
     "gsap": "^3.12.5",
     "next": "14.2.9",
     "nodemailer": "^6.9.15",
