--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.9",
     "nodemailer": "^6.9.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
