--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
-    "resend": "^4.0.0"
+    "react-slick": "^0.30.2",
+    "resend": "^4.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
