--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "nodemailer": "^6.9.15",
     "phosphor-react": "^1.4.1",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
     "react-tsparticles": "^2.1.0",
     "resend": "^4.0.0",
