--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@next/third-parties": "^14.2.13",
     "@nextui-org/react": "^2.4.6",
     "gsap": "^3.12.5",
     "next": "14.2.9",
