--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@next/third-parties": "^14.2.13",
     "@nextui-org/react": "^2.4.6",
+    "contentful": "^11.0.3",
     "gsap": "^3.12.5",
     "next": "14.2.9",
     "nodemailer": "^6.9.15",
